--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title class="">Sana Arif</title>
   </head>
   <body class="gradient">
-    <h1 class="text-light fs-4 d-flex justify-content-center p-2 g-col-6">About me</h1>
+    <h1 class="text-light fs-2 shadow-sm p-2 d-flex justify-content-center">About me</h1>
     <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand color_name" href="https://github.com/S-AR71">Sana Arif</a>
@@ -42,7 +42,7 @@
     </nav>
     <div class="container about-paragraphs grid gap-3">
       <div class="row">
-        <div class="p-2 g-col-6 border border-1">
+        <div class="p-1 g-col-6 border border-2">
           <p>
             Hi there, I'm Sana, a 27-year-old who loves reading and sipping coffee.
             I believe in living life fully and indulging in things that feed our
@@ -51,11 +51,10 @@
             "You never know what you can do until you try, and very few try unless they have to."
           </p>
         </div>
-        <br>
-        <div>
-          <img src="https://images.pexels.com/photos/4273468/pexels-photo-4273468.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 border border-2">
-        </div>
-          <div class="p-2 g-col-6 border border-1">
+        <h2>
+        <img src="https://images.pexels.com/photos/4273468/pexels-photo-4273468.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 text-center border border-1 mb-2 mt-2">
+        </h2>
+          <div class="p-1 g-col-6 border border-2">
           <p>
             I enjoy reading a variety of genres, but I have a particular fondness
         for non-fiction, spiritual, philosophical, poetry, and historical works.
