--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="abou.html#contact">Contatct Me</a>
+                <a class="nav-link" class="email-link" href="mailto:sana-arif@outlook.de">Contatct Me</a>
               </li>
           </div>
         </div>
