--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="abou.html#contact">Contatct Me</a>
+                <a class="nav-link" class="email-link" href="mailto:sana-arif@outlook.de">Contatct Me</a>
               </li>
           </div>
         </div>
@@ -48,3 +48,4 @@
     </nav>
   </body>
 </html>
+
