--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title class="">Sana Arif</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body class="gradient">
     <h2 class="text-light fs-4 d-flex justify-content-center p-2 g-col-6">Welcome to MY Homepage</h2>
