--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Looking motivation to read more Books?">
     <link
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
-    <title class="">Sana Arif</title>
+    <title class="">Dream Big and Read Books</title>
   </head>
   <body class="gradient">
     <h1 class="text-light fs-2 shadow-sm p-2 d-flex justify-content-center">About me</h1>
