--- a/about.html
+++ b/about.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Looking motivation to read more Books?">
+    <meta name="description" content="Looking for motivation how to read more Books?">
     <link
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F11RC2E2EG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F11RC2E2EG');
+</script>
     <title class="">Dream Big and Read Books</title>
   </head>
   <body class="gradient">
