--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F11RC2E2EG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F11RC2E2EG');
+</script>
     <title class="">Dream Big and Read Books</title>
     <link rel="stylesheet" href="css/style.css"/>
   </head>
