added some titles

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <h1 class="text-light fs-2 shadow-sm p-2 d-flex justify-content-center">About me</h1>
     <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand color_name" href="https://github.com/S-AR71">Sana Arif</a>
+        <a class="navbar-brand color_name" href="https://github.com/S-AR71" title="Github">Sana Arif</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,10 +37,10 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Me</a>
+                <a class="nav-link" href="about.html" title="About_Page">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" class="email-link" href="mailto:sana-arif@outlook.de">Contatct Me</a>
@@ -61,7 +61,7 @@
           </p>
         </div>
         <h2>
-        <img src="https://images.pexels.com/photos/4273468/pexels-photo-4273468.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 text-center border border-1 mb-2 mt-2">
+        <img src="https://images.pexels.com/photos/4273468/pexels-photo-4273468.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 text-center border border-1 mb-2 mt-2" title="img_book">
         </h2>
           <div class="p-1 g-col-6 border border-2">
           <p>
