--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <body class="gradient">
     <h2 class="text-light fs-4 d-flex justify-content-center p-2 g-col-6">Welcome to MY Homepage</h2>
     <h1>
-      <img src="https://images.pexels.com/photos/8058761/pexels-photo-8058761.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 border border-2">
+      <img src="https://images.pexels.com/photos/8058761/pexels-photo-8058761.jpeg?auto=compress&cs=tinysrgb&w=800" class="img-fluid w-50 p-2 g-col-6 border border-2" title="img_book1">
       </h1>
     <h3 class="text-light text-center p-2 g-col-6 fs-5">
       Front-end developer, based in Germany
     </h3>
     <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand color_name logo" href="https://github.com/S-AR71">Sana Arif</a>
+        <a class="navbar-brand color_name logo" href="https://github.com/S-AR71" title="Github">Sana Arif</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,13 +43,13 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" class="email-link" href="mailto:sana-arif@outlook.de">Contatct Me</a>
+                <a class="nav-link" class="email-link" href="mailto:sana-arif@outlook.de" title="e-mail">Contatct Me</a>
               </li>
           </div>
         </div>
